<resources>
    <string name="app_name">Spectacle</string>
    <string name="login_button">Entrar</string>
    <string name="signup_button">Cadastrar</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="signup">Cadastro</string>
    <string name="name">Nome</string>
    <string name="invalid_user">Não foi possível fazer o login. Verifique e-mail e senha.</string>
    <string name="signup_error">Não foi possível cadastrar o usuário.</string>
    <string name="what_to_do">O que deseja fazer?</string>
    <string name="musics">Músicas</string>
    <string name="musics_description">Veja suas músicas disponíveis</string>
    <string name="movies">Filmes</string>
    <string name="movies_description">Veja seus filmes disponíveis</string>
    <string name="my_playlist">Minha Playlist</string>
    <string name="my_movies">Meus Filmes</string>
    <string name="add_new_music">Adicionar nova música</string>
    <string name="search_music_playlist">Procurar na Playlist</string>
    <string name="search_movie_my_list">Procurar em Meus Filmes</string>
    <string name="spotify_connection_error">Não foi possível conectar ao Spotify. Tente novamente mais tarde.</string>
    <string name="remember_me">Lembrar de mim</string>
    <string name="music_was_added">A música %s foi adicionada a playlist</string>
    <string name="music_was_removed">A música %s foi removida da playlist</string>
</resources>